--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.38",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.13",
     "expo-font": "~13.0.4",
@@ -40,8 +41,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-camera": "~16.0.18"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
