--- a/app.json
+++ b/app.json
@@ -33,8 +33,8 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
-      
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
