--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/manjari": "^0.3.0",
+    "@expo-google-fonts/public-sans": "^0.3.0",
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
